--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="hero__items set-bg" data-setbg="img/img1.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">Get Involved</a>
+                    <a href="projects.html" class="primary-btn">Get Involved</a>
                     <div class="hero__social">
                         <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
@@ -117,7 +117,7 @@
             <div class="hero__items set-bg" data-setbg="img/learnbg3.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">Donate</a>
+                    <a href="services.html" class="primary-btn">Donate</a>
                     <div class="hero__social">
                         <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
@@ -128,7 +128,7 @@
             <div class="hero__items set-bg" data-setbg="img/img5.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">View Projects</a>
+                    <a href="blog.html" class="primary-btn">View Blog</a>
                     <div class="hero__social">
                         <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
@@ -139,7 +139,7 @@
             <div class="hero__items set-bg" data-setbg="img/learnbg2.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">Meet the Team</a>
+                    <a href="about.html" class="primary-btn">Meet the Team</a>
                     <div class="hero__social">
                         <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
