--- a/blog.html
+++ b/blog.html
@@ -117,8 +117,18 @@
                     <div class="blog__item__list">
                         <div class="blog__item">
                             <ul>
-                                <li>December 20, 2019 </li>
-                                <li>Planning</li>
+                                <li>October 27, 2021 </li>
+                                <li>Healthcare</li>
+                            </ul>
+                            <h2>
+                                <a href="Implantable Kidney"; style="color:black">The First Implantable Bioartificial Kidney</a>
+                            </h2>
+                            <img src="img/ney.jpg" alt=""></img>
+                            <div class="blog__item__text">
+                                <p> My grandpa was a very active and loving person. He would exercise every morning, go out for a run, drive, and play ping pong. He was a very optimistic person and loved to tell lots of stories. But in 2011, my grandfather’s kidneys started to fail. A few months later, he underwent surgery for peritoneal dialysis, the process of removing waste and excess fluid through an artificial machine - basically an external kidney. If that failed, then the only solution would be haemodialysis - cleaning directly through the blood.</p>
+                                <a href="Implantable Kidney.html">Read more</a>
+                            </div>
+                            </div>
                             </ul>
                             <h2>
                                 <a href="time-managment.html"; style="color:black">Time Management Tips & Tricks</a>
