--- a/blog-list.html
+++ b/blog-list.html
@@ -200,7 +200,7 @@
                     </div>
                     <div class="blog__item">
                         <ul>
-                            <li>September 14, 2021 </li>
+                            <li>November 12, 2021 </li>
                             <li>Mental Health</li>
                         </ul>
                         <h2>
@@ -220,6 +220,25 @@
                                 Sun God still enter the river to complete the ritual. A devotee, Rajesh Kumar Verma,
                                 states: “What fear? If we are scared, then how can we pray?”</p>
                             <a href="./blogs/india-river-toxic-farm.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 12, 2021 </li>
+                            <li>Space</li>
+                        </ul>
+                        <h2>
+                            <a href="./blogs/hubble-telescope.html" style="color:black">Hubble Telescope
+                            </a>
+                        </h2>
+                        <img src="img - Copy/blog/hubble1.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>The Hubble space telescope was launched into orbit 1990. Although not the first, it was
+                                one of the largest and most versatile space telescopes. By 2020, the Hubble has served
+                                for 30 years, with 5 repair missions. It is speculated that Hubble could last until 2030
+                                or 2040. However, as that is only a decade or two away, a replacement would be
+                                necessary.</p>
+                            <a href="./blogs/hubble-telescope.html">Read more</a>
                         </div>
                     </div>
                     <!--
