--- a/zoom.html
+++ b/zoom.html
@@ -57,6 +57,7 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
+                            <li><a href="./blog-list.html">blog-list</a></li>
                             <li><a href="./about.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./about.html">Contact</a></li>
