--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li class="active"><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="./blog-list.html">blog-list</a></li>
                             <li><a href="./services.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
@@ -72,10 +72,10 @@
                                     <li><a href="./Project-details.html">Project Details</a></li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="./blog-list-details.html">blog-list Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="./blog-list.html">blog-list</a></li>
                             <li><a href="./contact.html">Contact</a></li>
                         -->
                         </ul>
