--- a/blog-list.html
+++ b/blog-list.html
@@ -119,7 +119,7 @@
                                 <li>Healthcare</li>
                             </ul>
                             <h2>
-                                <a href="Implantable Kidney" ; style="color:black">The First Implantable Bioartificial
+                                <a href="implantable-kidney.html" ; style="color:black">The First Implantable Bioartificial
                                     Kidney</a>
                             </h2>
                             <img src="img/ney.jpg" alt=""></img>
@@ -131,7 +131,7 @@
                                     removing waste and excess fluid through an artificial machine - basically an
                                     external kidney. If that failed, then the only solution would be haemodialysis -
                                     cleaning directly through the blood.</p>
-                                <a href="Implantable Kidney.html">Read more</a>
+                                <a href="implantable-kidney.html">Read more</a>
                             </div>
                         </div>
                         </ul>
@@ -159,7 +159,7 @@
                             <li>Space</li>
                         </ul>
                         <h2>
-                            <a href="./blogs/space-junk.html" style="color:black">Space Junk</a>
+                            <a href="./spacejunk.html" style="color:black">Space Junk</a>
                         </h2>
                         <img src="img - Copy/blog/spacejunk1.jpg" alt="">
                         <div class="blog__item__text">
@@ -173,7 +173,7 @@
                                 November 12, 2021, the ISS narrowly avoided a major impact with a piece of a
                                 decommissioned Chinese weather satellite. The ISS travels 4.76 miles a second; an impact
                                 with something at that speed could be disastrous.</p>
-                            <a href="./blogs/space-junk.html">Read more</a>
+                            <a href="./spacejunk.html">Read more</a>
                         </div>
                     </div>
                     <div class="blog__item">
@@ -182,7 +182,7 @@
                             <li>Mental Health</li>
                         </ul>
                         <h2>
-                            <a href="./blogs/mental-health.html" style="color:black">Controlling Your Mental Health in
+                            <a href="./mental-health.html" style="color:black">Controlling Your Mental Health in
                                 Trying
                                 Times</a>
                         </h2>
@@ -195,7 +195,7 @@
                                 hand. Stress is an insanely important part of high school life that teens need to be
                                 careful of. To manage your stress, there are a number of things that you can do, and we
                                 will show you!</p>
-                            <a href="./blogs/mental-health.html">Read more</a>
+                            <a href="./mental-health.html">Read more</a>
                         </div>
                     </div>
                     <div class="blog__item">
@@ -204,7 +204,7 @@
                             <li>Mental Health</li>
                         </ul>
                         <h2>
-                            <a href="./blogs/india-river-toxic-farm.html" style="color:black">India’s River Covered in
+                            <a href="./river.html" style="color:black">India’s River Covered in
                                 Toxic Foam
                             </a>
                         </h2>
@@ -219,7 +219,7 @@
                                 exposes them to the toxic foam. Despite knowing the health risks, many devotees to the
                                 Sun God still enter the river to complete the ritual. A devotee, Rajesh Kumar Verma,
                                 states: “What fear? If we are scared, then how can we pray?”</p>
-                            <a href="./blogs/india-river-toxic-farm.html">Read more</a>
+                            <a href="./river.html">Read more</a>
                         </div>
                     </div>
                     <div class="blog__item">
@@ -228,7 +228,7 @@
                             <li>Space</li>
                         </ul>
                         <h2>
-                            <a href="./blogs/hubble-telescope.html" style="color:black">Hubble Telescope
+                            <a href="./hubble-telescope.html" style="color:black">Hubble Telescope
                             </a>
                         </h2>
                         <img src="img - Copy/blog/hubble1.jpeg" alt="">
@@ -238,7 +238,7 @@
                                 for 30 years, with 5 repair missions. It is speculated that Hubble could last until 2030
                                 or 2040. However, as that is only a decade or two away, a replacement would be
                                 necessary.</p>
-                            <a href="./blogs/hubble-telescope.html">Read more</a>
+                            <a href="./hubble-telescope.html">Read more</a>
                         </div>
                     </div>
                     <!--
