--- a/space-junk.html
+++ b/space-junk.html
@@ -2,82 +2,84 @@
 <html lang="zxx">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="description" content="Staging Template">
-	<meta name="keywords" content="Staging, unica, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Space Junk | ECDE</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Staging Template">
+    <meta name="keywords" content="Staging, unica, creative, html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The First Implantable Bioartificial Kidney | ECDE</title>
 
-	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-		rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
 
-	<link rel="icon" type="img/png" href="../img/sqlogo.png">
+            <link rel="icon"
+            type="img/png"
+            href="img/sqlogo.png"
+     >
 
-	<!-- Css Styles -->
-	<link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
-	<link rel="stylesheet" href="../css/elegant-icons.css" type="text/css">
-	<link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
-	<link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
-	<link rel="stylesheet" href="../css/style.css" type="text/css">
+    <!-- Css Styles -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
+    <!-- Page Preloder -->
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
 
-	<!-- Offcanvas Menu Begin -->
-	<div class="offcanvas-menu-overlay"></div>
-	<div class="offcanvas-menu-wrapper">
-		<div class="offcanvas__logo">
-			<a href="#"><img src="../img/ECDElogo.png" alt=""></a>
-		</div>
-		<div id="mobile-menu-wrap"></div>
-		<div class="offcanvas__widget">
-			<span>Call us for any questions</span>
-			<h4>(510) 737-9942</h4>
-		</div>
-	</div>
-	<!-- Offcanvas Menu End -->
+    <!-- Offcanvas Menu Begin -->
+    <div class="offcanvas-menu-overlay"></div>
+    <div class="offcanvas-menu-wrapper">
+        <div class="offcanvas__logo">
+            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
+        </div>
+        <div id="mobile-menu-wrap"></div>
+        <div class="offcanvas__widget">
+            <span>Call us for any questions</span>
+            <h4>(510) 737-9942</h4>
+        </div>
+    </div>
+    <!-- Offcanvas Menu End -->
 
-	<!-- Header Section Begin -->
-	<header class="header header-normal set-bg" data-setbg="../img/little-header.jpg">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="header__logo">
-						<a href="../index.html"><img style="height: 55px; width: 165px; margin: -10px;"
-								src="../img/ECDElogo.png" alt=""></a>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<nav class="header__menu mobile-menu">
-						<ul>
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../projects.html">Get Involved</a></li>
-							<li class="active"><a href="../blog.html">Blog</a></li>
-							<li><a href="../services.html">Donate</a></li>
-							<li><a href="../about.html">About Us</a></li>
-							<li><a href="../contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-				<div class="col-lg-3">
-					<div class="header__widget">
-						<span>Call us for any questions</span>
-						<h4>(510) 737-9942</h4>
-					</div>
-				</div>
-			</div>
-			<div class="canvas__open"><i class="fa fa-bars"></i></div>
-		</div>
-	</header>
-	<!-- Header Section End -->
+    <!-- Header Section Begin -->
+    <header class="header header-normal set-bg" data-setbg="img/little-header.jpg">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="header__logo">
+                        <a href="index.html"><img style="height: 55px; width: 165px; margin: -10px;" src="img/ECDElogo.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <nav class="header__menu mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./projects.html">Get Involved</a></li>
+                            <li class="active"><a href="./blog.html">Blog</a></li>
+                            <li><a href="./services.html">Donate</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-lg-3">
+                    <div class="header__widget">
+                        <span>Call us for any questions</span>
+                        <h4>(510) 737-9942</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="canvas__open"><i class="fa fa-bars"></i></div>
+        </div>
+    </header>
+    <!-- Header Section End -->
 
 	<!-- Blog Details Section Begin -->
 	<section class="blog-details spad">
@@ -134,6 +136,7 @@
 								a spacecraft meant to push old useless satellites
 								back
 								into Earth, ridding them from orbit.</p>
+							</div>	
 						</div>
 					</div>
 				</div>
