--- a/blog-list.html
+++ b/blog-list.html
@@ -228,7 +228,7 @@
                             <li>Space</li>
                         </ul>
                         <h2>
-                            <a href="./hubble-telescope.html" style="color:black">Hubble Telescope
+                            <a href="./space.html" style="color:black">Hubble Telescope
                             </a>
                         </h2>
                         <img src="img - Copy/blog/hubble1.jpeg" alt="">
@@ -238,7 +238,7 @@
                                 for 30 years, with 5 repair missions. It is speculated that Hubble could last until 2030
                                 or 2040. However, as that is only a decade or two away, a replacement would be
                                 necessary.</p>
-                            <a href="./hubble-telescope.html">Read more</a>
+                            <a href="./space.html">Read more</a>
                         </div>
                     </div>
                     <!--
