--- a/space.html
+++ b/space.html
@@ -93,7 +93,7 @@
                                 <li>Healthcare</li>
                             </ul>
                             <h2>Hubble Telescope</h2>
-                        <img src="../img - Copy/blog/hubble1.jpeg" alt="">
+                        <img src="img - Copy/blog/hubble1.jpeg" alt="">
                             <p>The Hubble space telescope was launched into orbit 1990. Although not the first, it was
                                 one of the largest and most versatile space telescopes. By 2020, the Hubble has served
                                 for 30 years, with 5 repair missions. It is speculated that Hubble could last until 2030
