--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
 									We take calls 5-8pm. Leave a voicemail so we can answer your
 									question
 								</p> -->
-								<span>ecdeorg@gmail.com</span>
+								<span>info@ecdefoundation.org</span>
 							</div>
 						</div>
 					</div>
@@ -183,20 +183,8 @@
 						margin-top: 3em;
 					"
 				>
-					<div class="col-lg-5">
-						<div class="contact__form__text">
-							<div class="section-title text-center">
-								<span>Form</span>
-								<h2>Get in touch</h2>
-							</div>
-							<p class="text-center">
-								As you might expect of a company that began as a high-end interiors
-								contractor, we pay strict attention.
-							</p>
-						</div>
-					</div>
 				</div>
-				<!-- <div class="row">
+				<div class="row">
 					<div class="col-lg-8">
 						<div class="contact__form">
 							<form action="#">
@@ -208,27 +196,13 @@
 										<input type="text" placeholder="Email" />
 									</div>
 									<div class="col-lg-12">
-										<textarea placeholder="Message"></textarea>
+										<textarea style='width:150%'; placeholder="Message"></textarea>
 										<button type="submit" class="site-btn">Send Message</button>
 									</div>
 								</div>
 							</form>
 						</div>
 					</div>
-				</div> -->
-				<div
-					class="row"
-					style="display: flex; justify-content: center; align-items: center"
-				>
-					<iframe
-						src="https://docs.google.com/forms/d/e/1FAIpQLScXHVhKQ-4ZyBnQzvm-l-zKalSs3NYFfZFEcU2I-oLRnlIAVw/viewform?embedded=true"
-						width="640"
-						height="927"
-						frameborder="0"
-						marginheight="0"
-						marginwidth="0"
-						>Loading…</iframe
-					>
 				</div>
 			</div>
 		</section>
@@ -261,7 +235,7 @@
 							</div>
 							<p>39111 Paseo Padre Pkwy<br />Fremont, CA 94538</p>
 							<ul>
-								<li>ecdeorg@gmail.com</li>
+								<li>info@ecdefoundation.org</li>
 								<li>(510) 737-9942</li>
 							</ul>
 							<div class="footer__social">
