--- a/about.html
+++ b/about.html
@@ -208,10 +208,10 @@
                     <div class="team__item set-bg" data-setbg="img/up.jpg">
                         <div class="team__text">
                             <div class="team__title">
-                                <h5>Ujjawal Prasad</h5>
+                                <h5>Vedant Birla</h5>
                                 <span>CMO</span>
                             </div>
-                            <p> Hi! I am Ujjawal, a sophomore at American High School. Ever since I was a kid, I have wanted to contribute back to society in some way, and when I found ECDE I knew helping underprivileged kids was the way to do that. Along with allowing me to help those in need, I have also learned valuable skills in ECDE such as team management and marketing.</p>
+                            <p> Hey, I'm Vedant, a junior at California High School. I have always loved helping people, and ECDE helps me give back to the community by helping those in need. I have been in ECDE since 2018, and I am an experienced leader with an interest in the field of physics.</p>
                             <div class="team__social">
                                 <a href="https://www.facebook.com/ujjawal.prasad.750/"><i class="fa fa-facebook"></i></a>
                                 <a href="https://www.instagram.com/8wali8/"><i class="fa fa-instagram"></i></a>
