--- a/about.html
+++ b/about.html
@@ -205,18 +205,18 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/up.jpg">
+                    <div class="team__item set-bg" data-setbg="img/vedant.jpg">
                         <div class="team__text">
                             <div class="team__title">
                                 <h5>Vedant Birla</h5>
-                                <span>CMO</span>
+                                <span>Managing Director</span>
                             </div>
                             <p> Hey, I'm Vedant, a junior at California High School. I have always loved helping people, and ECDE helps me give back to the community by helping those in need. I have been in ECDE since 2018, and I am an experienced leader with an interest in the field of physics.</p>
                             <div class="team__social">
-                                <a href="https://www.facebook.com/ujjawal.prasad.750/"><i class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/8wali8/"><i class="fa fa-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/ujjawal-prasad-059563216/"><i class="fa fa-linkedin"></i></a>
-                            </div>
+                                <a href="https://www.facebook.com/vedant.birla.18/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/vedant_birla3/"><i class="fa fa-instagram"></i></a>
+                                </a>
+                                </div>
                         </div>
                     </div>
                 </div>
