--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="contact__form">
-							<form action="#">
+							<form data-netlify= true action="#">
 								<div class="row">
 									<div class="col-lg-6 col-md-6 col-sm-6">
 										<input type="text" placeholder="Name" />
