--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
                         <div class="team__text">
                             <div class="team__title">
                                 <h5>Vedant Birla</h5>
-                                <span>Managing Director</span>
+                                <span>Director of Operations</span>
                             </div>
                             <p> Hey, I'm Vedant, a junior at California High School. I have always loved helping people, and ECDE helps me give back to the community by helping those in need. I have been in ECDE since 2018, and I am an experienced leader with an interest in the field of physics.</p>
                             <div class="team__social">
