--- a/contact.html
+++ b/contact.html
@@ -187,20 +187,34 @@
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="contact__form">
-							<form data-netlify ="true" action="#">
-								<div class="row">
-									<div class="col-lg-6 col-md-6 col-sm-6">
-										<input type="text" placeholder="Name" />
-									</div>
-									<div class="col-lg-6 col-md-6 col-sm-6">
-										<input type="text" placeholder="Email" />
-									</div>
-									<div class="col-lg-12">
-										<textarea style='width:150%'; placeholder="Message"></textarea>
-										<button type="submit" class="site-btn">Send Message</button>
-									</div>
-								</div>
-							</form>
+			                <form name='contactForm' id='contactForm' method='post' novalidate='novalidate'><input type='hidden' name='form-name' value='contactForm' />
+			                    <fieldset>
+			    
+			                    <div style='color:white'; class="form-field">
+			                        <input style='width: 150%'; name="contactName" type="text" id="contactName" placeholder="Your Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+			                    </div>
+			                    <div class="form-field">
+			                        <input style='width: 150%'; name="contactEmail" type="email" id="contactEmail" placeholder="Your Email" value="" required="" aria-required="true" class="full-width">
+			                    </div>
+			                    <div class="form-field">
+			                        <input style='width: 150%'; name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
+			                    </div>
+			                    <div class="form-field">
+			                        <textarea style='width: 150%'; name="contactMessage" id="contactMessage" placeholder="Your Message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+			                    </div>
+			                    <div class="form-field">
+			                        <button style='color:white'; class="site-btn">Submit</button>
+			                        <div class="submit-loader">
+			                            <div class="s-loader">
+			                                <div class="bounce1"></div>
+			                                <div class="bounce2"></div>
+			                                <div class="bounce3"></div>
+			                            </div>
+			                        </div>
+			                    </div>
+			    
+			                    </fieldset>
+			                </form>
 						</div>
 					</div>
 				</div>
