--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="contact__form">
-			                <form name='contactForm' id='contactForm' method='post' novalidate='novalidate'><input type='hidden' name='form-name' value='contactForm' />
+			                <form data-netlify="true" name='contactForm' id='contactForm' method='post' novalidate='novalidate'><input type='hidden' name='form-name' value='contactForm' />
 			                    <fieldset>
 			    
 			                    <div style='color:white'; class="form-field">
