--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="./blog-list.html">Blog</a></li>
                             <li><a href="./services.html">Donate</a></li>
                             <li class="active"><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
@@ -209,7 +209,7 @@
                         <div class="team__text">
                             <div class="team__title">
                                 <h5>Vedant Birla</h5>
-                                <span>Director of Operations</span>
+                                <span>COO</span>
                             </div>
                             <p> Hey, I'm Vedant, a junior at California High School. I have always loved helping people, and ECDE helps me give back to the community by helping those in need. I have been in ECDE since 2018, and I am an experienced leader with an interest in the field of physics.</p>
                             <div class="team__social">
@@ -241,7 +241,7 @@
                         <div class="team__text">
                             <div class="team__title">
                                 <h5>Prisha Sanghvi</h5>
-                                <span>COO</span>
+                                <span>CRO</span>
                             </div>
                             <p>Hey, I am Prisha and I am a junior at Dougherty Valley High School. I have always been interested in giving back to the community and helping out with educational passions and projects, especially in India. I have been part of organizations before that have helped give back to the youth in need.</p>
                             <div class="team__social">
