--- a/about.html
+++ b/about.html
@@ -251,6 +251,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/prisha.jpeg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Prisha Sanghvi</h5>
+                                <span>CRO</span>
+                            </div>
+                            <p>Hey, I am Prisha and I am a junior at Dougherty Valley High School. I have always been interested in giving back to the community and helping out with educational passions and projects, especially in India. I have been part of organizations before that have helped give back to the youth in need.</p>
+                            <div class="team__social">
+                                <a href="https://www.facebook.com/prisha.sanghvi.75/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/0_0prishasanghvi0_0/"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
