--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                 <div class="col-lg-9 col-md-8 col-sm-6">
                     <div class="section-title">
                         <span>Our Team</span>
-                        <h2>Meet our team</h2>
+                        <h2>Meet our Executives</h2>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
@@ -252,16 +252,117 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/prisha.jpeg">
+                    <div class="team__item set-bg" data-setbg="img/eric.jpg">
                         <div class="team__text">
                             <div class="team__title">
-                                <h5>Prisha Sanghvi</h5>
-                                <span>CRO</span>
+                                <h5>Eric Cai</h5>
+                                <span>Chief Blog Manager</span>
                             </div>
-                            <p>Hey, I am Prisha and I am a junior at Dougherty Valley High School. I have always been interested in giving back to the community and helping out with educational passions and projects, especially in India. I have been part of organizations before that have helped give back to the youth in need.</p>
+                            <p>Hello, I am Eric Cai, a junior (11th grader) at American High School. I have an interest in graphic design and journalism. I often spend my time practicing drawing, editing, and playing video games. I’ve always aspired to give back to the community and help underprivileged children.
+</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9 col-md-8 col-sm-6">
+                    <div class="section-title">
+                        <h2>Meet our Employees</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/edyln.jpeg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Edlyn Liang</h5>
+                                <span>Marketing Head & Social Media Manager</span>
+                            </div>
+                            <p>Hello, I’m Edlyn Liang, a junior at American High School. I enjoy sleeping, creative writing, drawing, and music in my free time. Graphic design is my passion and I hope to bring my skills in that field to maximize my impact in promoting ECDE and its fundraisers.</p>
                             <div class="team__social">
-                                <a href="https://www.facebook.com/prisha.sanghvi.75/"><i class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/0_0prishasanghvi0_0/"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/edlyn.liang"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/edlyn_liang/"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/ayushman.jpg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Ayushman Chakraborty</h5>
+                                <span>Fundraising Manager</span>
+                            </div>
+                            <p>Hello, I am Ayushman Chakraborty. I am in eleventh grade and a current student at American High School. My favorite subject in school is Calculus since I enjoy solving problems that require me to think outside the box. I am very fortunate to have lived in a country where there are many opportunities</p>
+                            <div class="team__social">
+                                <a href="https://www.facebook.com/ayushman.chakraborty.79"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/mi.ayush.man/"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/ronald.png">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Ronald (Yi Hao) Li</h5>
+                                <span>Curriculum Developer & Fundraising Member</span>
+                            </div>
+                            <p>Hello, I am Ronald (Yi Hao) Li, a junior at Irvington High School. I have an interest in computer science and I enjoy coding. In my spare time, I enjoy watching beautiful sunets, playing basketball, and listening to music. I joined ECDE because I hope to educate the youth and I believe that Every Child Deserves Education.</p>
+                            <div class="team__social">
+                                <a href="www.facebook.com/Ronaldliyh"><i class="fa fa-facebook"></i></a>
+                                <a href="www.instagram.com/rl_519/"><i class="fa fa-instagram"></i></a>
+                                <a href="www.linkedin.com/in/ronaldliyh666"><i class="fa fa-linkedin"></i></a>
+                                </a>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/sam.jpg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Samuel (Yen-Lin) Lee</h5>
+                                <span>Coordinator</span>
+                            </div>
+                            <p>Hi! My name is Samuel(Yen-Lin) Lee. In 9th and 10th grade, I learn both frontend programming and Python on my own, and now, I am learning backend development. I grew up in Taiwan and come to the US about 4 years ago. Because English is not my first language, I know the value of educational help, and I hope I can provide help to others.</p>
+                            <div class="team__social">
+                                <a href="https://www.facebook.com/profile.php?id=100017423167219"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/samuel_lee3333/"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/himasa.jpeg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Himasameera Vakamullui</h5>
+                                <span>Graphic Designer</span>
+                            </div>
+                            <p>Hello, I’m Himasameera Vakamullu, a junior at American High School. I like reading, painting, and drawing in my free time. I have been learning the flute and the violin since I was young. I performed two of these instruments on stages and went to mini competitions where I won awards. My dedication to community service has won me the congressional award.</p>
+                            <div class="team__social">
+                                <a href="https://www.facebook.com/himasameera835"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/hima_sameera835/"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/tj.png">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Tj Kalapatapu</h5>
+                                <span>Project Developer</span>
+                            </div>
+                            <p>Hi, I am Tj Kalapatapu, a junior at American High School. I love to learn about programming, math, and physics. In my spare time, I enjoy playing video games, coding, and socializing with friends. I learned JavaScript in 6th grade and Python in 7th grade. I love helping people in general and my own organization, and look forward to helping ECDE grow.</p>
+                            <div class="team__social">
+                                <a href="www.instagram.com/lts_tj"><i class="fa fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -269,6 +370,11 @@
             </div>
         </div>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <!-- Team Section End -->
 
     <!-- Footer Section Begin -->
@@ -311,20 +417,13 @@
             </div>
             <div class="copyright">
                 <div class="row">
-                    <div class="col-lg-8 col-md-7">
+                    <div style='padding-left:30%'; class="col-lg-8 col-md-7">
                         <div class="copyright__text">
                             <p>Copyright © <script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
+                            </script> All rights reserved<a href="https://every-child-deserves-education-foundation.netlify.app/"
+                            target="_blank"> ECDE Foundation</a>
                         </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-5">
-                    <div class="copyright__widget">
-                        <a href="#">Terms of use</a>
-                        <a href="#">Privacy Policy</a>
                     </div>
                 </div>
             </div>
