--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
                             <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./blog-list.html">blog-list</a></li>
+                            <li><a href="./blog-list.html">Blog</a></li>
                             <li class="active"><a href="./services.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
@@ -318,25 +318,17 @@
 					</div>
 				</div>
 				<div class="copyright">
-					<div class="row">
-						<div class="col-lg-8 col-md-7">
-							<div class="copyright__text">
-								<p>Copyright © <script>
-									document.write(new Date().getFullYear());
-								</script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-								aria-hidden="true"></i> by <a href="https://colorlib.com"
-								target="_blank">Colorlib</a>
-							</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-5">
-						<div class="copyright__widget">
-							<a href="#">Terms of use</a>
-							<a href="#">Privacy Policy</a>
-						</div>
-					</div>
-				</div>
-			</div>
+                <div class="row">
+                    <div style='padding-left:30%'; class="col-lg-8 col-md-7">
+                        <div class="copyright__text">
+                            <p>Copyright © <script>
+                                document.write(new Date().getFullYear());
+                            </script> All rights reserved<a href="https://every-child-deserves-education-foundation.netlify.app/"
+                            target="_blank"> ECDE Foundation</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
 		</div>
 	</footer>
 		<!-- Footer Section End -->
