--- a/spacejunk.html
+++ b/spacejunk.html
@@ -184,20 +184,13 @@
             </div>
             <div class="copyright">
                 <div class="row">
-                    <div class="col-lg-8 col-md-7">
+                    <div style='padding-left:30%'; class="col-lg-8 col-md-7">
                         <div class="copyright__text">
                             <p>Copyright © <script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
+                            </script> All rights reserved<a href="https://every-child-deserves-education-foundation.netlify.app/"
+                            target="_blank"> ECDE Foundation</a>
                         </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-5">
-                    <div class="copyright__widget">
-                        <a href="#">Terms of use</a>
-                        <a href="#">Privacy Policy</a>
                     </div>
                 </div>
             </div>
