--- a/services.html
+++ b/services.html
@@ -143,7 +143,7 @@
 							<img src="img/services/services-2.png" alt="" />
 							<h4>GoFundMe</h4>
 							<a>
-                                You can also donate via <a href="https://bit.ly/ecdegofundme">GoFundMe</a>
+                                You can also donate via <a href="https://www.gofundme.com/f/help-3-rural-public-schools-in-india?utm_campaign=p_lico+share-sheet&utm_medium=copy_link&utm_source=customer">GoFundMe</a>
 							</p>
 							<!-- <ul>
 								<li>- Active system.</li>
