--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
                         <div class="team__text">
                             <div class="team__title">
                                 <h5>Eric Cai</h5>
-                                <span>Chief Blog Manager</span>
+                                <span>Chief Commercial Officer</span>
                             </div>
                             <p>Hello, I am Eric Cai, a junior (11th grader) at American High School. I have an interest in graphic design and journalism. I often spend my time practicing drawing, editing, and playing video games. I’ve always aspired to give back to the community and help underprivileged children.
 </p>
