add example blogs

--- a/Warriors.html
+++ b/Warriors.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Staging, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>The First Implantable Bioartificial Kidney | ECDE</title>
+    <title>How Warriors Can Win the Championships Again | ECDE</title>
 
     <!-- Google Font -->
     <link
@@ -99,60 +99,49 @@
               <div class="blog__details__title">
                 <ul>
                   <li>November 12, 2021</li>
+                  <li>By Steve Kerr</li>
                   <li>Healthcare</li>
                 </ul>
-                <h2>Hubble Telescope</h2>
-                <img src="img - Copy/blog/hubble1.jpeg" alt="" />
+                <h2>How Warriors Can Win the Championships Again</h2>
+                <img src="img/gsw.jpeg" alt="" />
                 <p>
-                  The Hubble space telescope was launched into orbit 1990.
-                  Although not the first, it was one of the largest and most
-                  versatile space telescopes. By 2020, the Hubble has served for
-                  30 years, with 5 repair missions. It is speculated that Hubble
-                  could last until 2030 or 2040. However, as that is only a
-                  decade or two away, a replacement would be necessary.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nihil, provident. Suscipit sit non quasi in tenetur
+                  perspiciatis commodi assumenda fugit rem dolore? Consequuntur
+                  commodi debitis quibusdam eveniet inventore aliquam ea
+                  repellendus obcaecati, laborum ipsum? Veniam alias magni sint
+                  rerum nihil.
                 </p>
                 <br />
                 <p>
-                  Enter the James Webb Space Telescope, or the JWST. According
-                  to NASA, the James Webb telescope will be the largest, most
-                  complex, and most powerful space telescope yet. They claim
-                  that it will “fundamentally alter our understanding of the
-                  universe”. NASA completed the development of the James Webb
-                  telescope in 2016. The project started with a 500 million
-                  budget, which increased to 10 billion dollars.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Cumque delectus, error repellendus nesciunt rem placeat modi
+                  similique labore unde! Repellendus porro distinctio autem,
+                  molestias at expedita tempore. Tempore expedita mollitia porro
+                  deleniti molestiae, non natus necessitatibus maxime iusto
+                  quibusdam tempora earum accusamus aperiam unde dolor id ipsam
+                  velit, praesentium at!
                 </p>
                 <br />
-                <img src="../img - Copy/blog/hubble2.jfif" alt="" />
+                <img src="img/gsw.jpeg" alt="" />
                 <p>
-                  The JWST will use infrared light to extend Hubble's previous
-                  discoveries. According to NASA, the James Webb is “100 times
-                  more powerful than Hubble”. It will be able to look back in
-                  time over 13.5 billion years to see the first galaxies born
-                  after the Big Bang. The honeycomb design for the James Webb
-                  telescope is to have the largest possible reflective surface
-                  area to make the observations. Take a look:
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quisquam placeat labore sint voluptatibus fugiat. Soluta quod,
+                  alias porro ducimus, repudiandae accusamus sit laudantium
+                  impedit iure nemo repellat ullam ipsum! Eligendi?
                 </p>
                 <br />
                 <p>
-                  By creating this telescope, NASA can help impact the way we
-                  see the universe, taking pictures of exoplanets and clouds of
-                  space dust that seemed blurry or opaque to the Hubble space
-                  telescope. The improvements with the James Webb can help take
-                  much clearer pictures and possibly discover new things
-                  throughout the universe. This can be one of the most
-                  revolutionary NASA projects yet!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                  tempora qui dignissimos incidunt delectus nulla dolorum,
+                  perspiciatis distinctio nam accusantium?
                 </p>
                 <br />
                 <p>
-                  The creation of the Hubble Space Telescope was one of the
-                  greatest projects by NASA, as it provided images and data that
-                  far exceeded anything else at the time. With the new and
-                  improved James Webb Space Telescope, it may be one of the
-                  biggest inspired wonders for what would come next. As said by
-                  Gregory Robinson, “We are now very close to unlocking
-                  mysteries of the cosmos.” With the telescope rapidly
-                  improving, we may even be looking at beyond the galaxies in
-                  less than 20 years.”
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                  voluptates harum deleniti repudiandae molestiae non, magni
+                  esse, similique quisquam veniam dicta voluptatum omnis vel
+                  explicabo mollitia. Accusamus odio sed ea?
                 </p>
               </div>
             </div>
