--- a/blog-list.html
+++ b/blog-list.html
@@ -258,7 +258,48 @@
                             </div>
                         </div>
                     -->
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 26, 2021 </li>
+                            <li>By Eric Cai, Andy Cai, Rohit Isukapalli, Benjamin Qiao</li>
+                            <li>Environment</li>
+                        </ul>
+                        <h2>Real Christmas Trees vs Artificial Trees</h2>
+                        <img src="img/blog/blog-7.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>	Christmas trees have been around since 16th century Germany, when devout Christians brought trees into their homes to celebrate Christmas. They used real trees cut fresh from a forest nearby, and brought them home to decorate with pine cones and candles. Nowadays, however, you can buy an artificial tree instead of cutting it yourself. Tree ornaments could be found in  Walmart, Target, and other retail stores.</p>
+                            <a href="./blog7.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 15, 2021 </li>
+                            <li>By Quan Doan, Faith Qiao</li>
+                            <li>Tradition</li>
+                        </ul>
+                        <h2>A Turkey for Thanksgiving</h2>
+                        <img src="img/blog/blog-15.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>Early on in the American Thanksgiving saga, turkey had always been eaten. It wasn’t, however, an important staple on the Thanksgiving day dinner table. Recent evidence from the first meal between the colonists and Native Americans at Plymouth now indicates that turkey may not have even been served then—begging the question: why do we eat Turkey every Thanksgiving?</p>
+                            <a href="./blog15.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>January 23, 2022 </li>
+                            <li>By Benjamin Qiao, Andy Cai</li>
+                            <li>Social</li>
+                        </ul>
+                        <h2>Single Gender Schools Comparison</h2>
+                        <img src="img/blog/blog-11.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>Ever since 2002 when the No Child Left Behind Act was passed, the popularity of single-schools have been rising. There are mixed feelings about single gendered schools. Some say that it limits the interaction between boys and girls, but others say it is a better environment to study. Here are some pros and cons for single gendered schools and how they can impact a student’s learning.
+                            </p>
+                            <a href="./blog11.html">Read more</a>
+                        </div>
+                    </div>
                 </div>
+            </div>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="blog__pagination">
